# ATCTrainer

./: CMakeLists.txt  build.ps1
adapter/: Program.cs
plugin/: ATCTrainerPlugin.cpp  ATCTrainerPlugin.h
test/: TestHarness.cpp
